--- a/templates/home.html
+++ b/templates/home.html
@@ -390,6 +390,7 @@ $(document).ready(function() {
     });
 
     var colorset = ['rgba(221, 107, 102, 0.9)', 'rgba(215, 135, 230, 0.9)', 'rgba(110, 113, 199, 0.9)', 'rgba(109, 188, 191, 0.9)', 'rgba(117, 179, 117, 0.9)', 'rgba(243, 230, 162, 0.9)'];
+    var colorset1 = ['rgba(243, 230, 162, 0.9)', 'rgba(234, 126, 83, 0.9)', 'rgba(221, 107, 102, 0.9)', 'rgba(230, 157, 135, 0.9)', 'rgba(215, 135, 230, 0.9)', 'rgba(110, 113, 199, 0.9)', 'rgba(109, 188, 191, 0.9)', 'rgba(117, 179, 117, 0.9)'];
 
     function num_to_week(n) {
         if (n == 0) {
@@ -559,8 +560,6 @@ $(document).ready(function() {
     var plot3 = echarts.init(document.getElementById('plot3'), 'dark');
     // var cold_colors = d3.interpolate(d3.rgb(80, 163, 186), d3.rgb(234, 199, 54));
     var cold_colors = d3.interpolate(d3.rgb(109, 188, 191), d3.rgb(243, 230, 162));
-
-    var colorset = ['rgba(221, 107, 102, 0.9)', 'rgba(215, 135, 230, 0.9)', 'rgba(110, 113, 199, 0.9)', 'rgba(109, 188, 191, 0.9)', 'rgba(117, 179, 117, 0.9)', 'rgba(243, 230, 162, 0.9)'];
 
     var param3 = '初始评级';
     var mode3 = 1;
