--- a/templates/layout.html
+++ b/templates/layout.html
@@ -391,7 +391,7 @@
         {% if auth['is_auth'] %}
         <div id="nav">
             <a href="{{url_for('home')}}" id="nav1"><i class="fa fa-fw fa-paper-plane"></i><span>平台概览</span></a>
-            <a href="{{url_for('example')}}" id="nav2"><i class="fa fa-fw fa-star"></i><span>个人中心</span></a>
+            <a href="{{url_for('example')}}" id="nav2"><i class="fa fa-fw fa-user"></i><span>个人中心</span></a>
             <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a>
             <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a>
             <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-sign-out"></i><span>注销授权</span></a>
