--- a/templates/layout.html
+++ b/templates/layout.html
@@ -411,7 +411,7 @@
                 <h4>拍知心</h4>
                 <h5>面向拍拍贷用户的智能聊天机器人</h4>
             </div>
-            <p style="text-align:center;font-size:12px;margin-top:10px;color:#999;margin-bottom:15px;">功能持续完善中</p>
+            <!-- <p style="text-align:center;font-size:12px;margin-top:10px;color:#999;margin-bottom:15px;">功能持续完善中</p> -->
         </div>
         <div class="input-group">
             <input type="text" class="form-control" name="chat" placeholder="">
