--- a/templates/layout.html
+++ b/templates/layout.html
@@ -428,7 +428,13 @@
         <p style="font-size:13px;margin-top:5px;color:#ccc">已有<span style="color:#d94e5d;margin-left:10px;margin-right:10px;">{{ auth['count'] }}</span>名用户授权登陆</p>
         <div style="position:absolute;right:45px;bottom:30px;">
             <p style="font-size:12px;color:#999;text-align:right;line-height:2;">
-                推荐使用 Chrome Safari 等浏览器访问<br/>功能建议 问题反馈<br/>请联系微信 <a href="http://zhanghonglun.cn" target="_blank" style="color:#d94e5d;text-decoration:underline;">Honlann</a>
+                推荐使用 Chrome Safari 等浏览器访问<br/>功能建议 问题反馈<br/>请联系微信 <a href="http://zhanghonglun.cn" target="_blank" style="color:#d94e5d;text-decoration:underline;margin-left:6px;margin-right:0;">Honlann</a>
+            </p>
+        </div>
+        <div style="position:absolute;left:45px;bottom:30px;">
+            <p style="font-size:12px;color:#999;text-align:left;line-height:2;">
+                查看<a href="{{url_for('static',filename='pdi.pdf')}}" target="_blank" style="color:#d94e5d;text-decoration:underline;margin-left:6px;">作品介绍PPT</a>
+                <br/>查看<a href="https://v.qq.com/x/page/n0538boxfjx.html" target="_blank" style="color:#d94e5d;text-decoration:underline;margin-left:6px;">作品展示视频</a><br/>更全面地了解<span style="color:#d94e5d;margin-left:6px;">拍知心</span>
             </p>
         </div>
     </div>
